objects/alm_pm2__SSH_Keypair__c.object
<CustomObject>
 <fullName>alm_pm2__SSH_Keypair__c</fullName>
 <fields>
  <fullName>alm_pm2__Passphrase__c</fullName>
  <description>A passphrase used to encrypt/decrypt SSH keys.</description>
  <inlineHelpText>A passphrase used to encrypt/decrypt SSH keys.</inlineHelpText>
  <label>Passphrase</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Private_Key__c</fullName>
  <description>An encrypted SSH private key.</description>
  <inlineHelpText>An encrypted SSH private key.</inlineHelpText>
  <label>Private Key</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Public_Key__c</fullName>
  <description>An encrypted SSH public key.</description>
  <inlineHelpText>An encrypted SSH public key.</inlineHelpText>
  <label>Public Key</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <label>SSH Keypair</label>
 <listViews>
  <fullName>alm_pm2__All</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <label>SSH Keypair Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>SSH Keypairs</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>